# quiver

./: .clang-format  .clang-tidy  .gitignore  .readthedocs.yaml  BUILDING.md  CMakeLists.txt  CMakePresets.json  README.md  TODO.md  iwyu.json  pyproject.toml  requirements.txt
.github/workflows/: build_test.yml
bench-build/: .ninja_deps  .ninja_log  build.ninja  hash_benchmarks  hashtable_benchmarks  row_benchmarks
ci/wheels/manylinux/: 2_28-x86_64.Dockerfile  build.sh
cmake-modules/: ClangTools.cmake  CodeCoverage.cmake
docs/: developers.md  map_insert.md  map_lookup.md
docs/source/: conf.py  index.rst  python_reference.rst
src/python/: CMakeLists.txt  pyquiver.cc
src/python/benchmarks/: join.py
src/python/pyquiver/: __init__.py  _quiver.cc  collections.py
src/python/quiver/: __init__.py  _quiver.cc  collections.py
src/python/tests/: test_accumulator.py  test_map.py
src/quiver/: build_id.h.in  lib.cc  lib.h  pch.h  test_test.cc
src/quiver/accumulator/: accumulator.cc  accumulator.h  accumulator_test.cc
src/quiver/benchutil/: datagen.cc  datagen.h  main.h
src/quiver/core/: array.cc  array.h  array_test.cc  arrow.h  buffer.h  builder.cc  builder.h  flat_batch.cc  flat_batch.h  io.cc  io.h
src/quiver/datagen/: datagen.cc  datagen.h
src/quiver/hash/: hasher.cc  hasher.h  hasher_benchmark.cc  hasher_test.cc
src/quiver/hashtable/: hashtable.cc  hashtable.h  hashtable_benchmark.cc  hashtable_test.cc
src/quiver/map/: equality.cc  equality.h  equality_benchmark.cc  equality_test.cc  hashmap.cc  hashmap.h  hashmap_test.cc
src/quiver/row/: row_benchmarks.cc  row_internal.cc  row_internal.h  row_p.cc  row_p.h  row_test.cc
src/quiver/sort/: sort.cc  sort.h  sort_test.cc
src/quiver/store/: mmap_store.cc  mmap_store.h  mmap_store_test.cc
src/quiver/testutil/: gen.cc  gen.h  main.cc  test_util.cc  test_util.h  tmpfiles.cc  tmpfiles.h
src/quiver/util/: align_util.h  arrow_util.cc  arrow_util.h  arrow_util_test.cc  bit_block_counter.h  bit_util.cc  bit_util.h  bit_util_test.cc  bitmap_ops.cc  bitmap_ops.h  bitmap_reader.h  bitmap_writer.h  compare.h  config.cc  config.h  constants.h  cpu_info.cc  cpu_info.h  cpu_info_test.cc  endian.h  finally.h  gtest_util.h  literals.h  local_allocator_p.cc  local_allocator_p.h  local_allocator_p_test.cc  logging_p.cc  logging_p.h  macros.h  memory.cc  memory.h  memory_pool.cc  memory_pool.h  memory_test.cc  printers.h  random.cc  random.h  status.cc  status.h  string_builder.cc  (+9 more)
